--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>prizeme-landing</title>
+
+    <title>PrizeMe — розыгрыши в Telegram для каналов и сообществ</title>
+    <meta
+      name="description"
+      content="PrizeMe помогает запускать честные розыгрыши в Telegram: участие по кнопке, защита от накрутки, результаты и победители автоматически."
+    />
+    <link rel="canonical" href="https://prizeme.ru/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="PrizeMe — розыгрыши в Telegram" />
+    <meta
+      property="og:description"
+      content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты и победители автоматически."
+    />
+    <meta property="og:url" content="https://prizeme.ru/" />
+    <meta property="og:image" content="https://prizeme.ru/og.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PrizeMe — розыгрыши в Telegram" />
+    <meta
+      name="twitter:description"
+      content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты автоматически."
+    />
+    <meta name="twitter:image" content="https://prizeme.ru/og.png" />
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
