--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты и победители автоматически."
     />
     <meta property="og:url" content="https://prizeme.ru/" />
-    <meta property="og:image" content="https://prizeme.ru/og.png?v=1" />
+    <meta property="og:image" content="https://prizeme.ru/og.png?v=2" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PrizeMe — розыгрыши в Telegram" />
@@ -27,7 +27,10 @@
       name="twitter:description"
       content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты автоматически."
     />
-    <meta name="twitter:image" content="https://prizeme.ru/og.png?v=1" />
+    <meta name="twitter:image" content="https://prizeme.ru/og.png?v=2" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
 
   <body>
