--- a/index.html
+++ b/index.html
@@ -13,24 +13,28 @@
     <link rel="canonical" href="https://prizeme.ru/" />
 
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="PrizeMe" />
+    <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="PrizeMe — розыгрыши в Telegram" />
     <meta
-      property="og:description"
-      content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты и победители автоматически."
+    property="og:description"
+    content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты и победители автоматически."
     />
     <meta property="og:url" content="https://prizeme.ru/" />
-    <meta property="og:image" content="https://prizeme.ru/og.png?v=2" />
+
+    <meta property="og:image" content="https://prizeme.ru/og.png?v=3" />
+    <meta property="og:image:secure_url" content="https://prizeme.ru/og.png?v=3" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PrizeMe — розыгрыши в Telegram" />
     <meta
-      name="twitter:description"
-      content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты автоматически."
+    name="twitter:description"
+    content="Запускайте розыгрыши в Telegram за пару минут. Условия участия, защита от накрутки, результаты автоматически."
     />
-    <meta name="twitter:image" content="https://prizeme.ru/og.png?v=2" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta name="twitter:image" content="https://prizeme.ru/og.png?v=3" />
   </head>
 
   <body>
