--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico?v=1" />
 
-    <title>PrizeMe — розыгрыши в Telegram для каналов и сообществ</title>
+    <title>PrizeMe — бесплатный сервис создания розыгрышей в Telegram</title>
     <meta
-      name="description"
-      content="PrizeMe помогает запускать честные розыгрыши в Telegram: участие по кнопке, защита от накрутки, результаты и победители автоматически."
+    name="description"
+    content="PrizeMe — бесплатный сервис для запуска розыгрышей в Telegram. Участие по кнопке, защита от накрутки, автоматическое определение победителей и результатов."
     />
     <link rel="canonical" href="https://prizeme.ru/" />
 
